Max width for todoitem avoid stretch

--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -10,6 +10,7 @@ li {
     text-align: left;
     width: 70%;
     color: white;
+    max-width: 630px;
 }
 
 button {
